--- a/text.html
+++ b/text.html
@@ -10,6 +10,8 @@
 
 <body>
     <script src="./script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <header class="header" id="scorecard">
         <h2>Quiz</h2>
         <h3 id="preScore"></h3>
