--- a/text.html
+++ b/text.html
@@ -6,43 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-    <script src="./script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
 
     <header class="header" id="scorecard">
         <h2>Quiz</h2>
         <h3 id="preScore"></h3>
-        <h2>Time Left:<span id="timeLeft"></span></h2>
+
 
     </header>
 
     <main class="main">
         <h1>Sup?</h1>
-        <p>60 seconds, get to it</p>
+        <p>69 seconds, get to it</p>
         <button id="startBtn">Less Gooo!</button>
     </main>
 
     <section class="testQuestions" id="questionEl">
         <h2 id="keepScore"></h2>
         <h3 id="question">Question</h3>
-        <button id="optionA" class="answer" value="a"></button>
-        <button id="optionB" class="answer" value="b"></button>
-        <button id="optionC" class="answer" value="c"></button>
-        <button id="optionD" class="answer" value="d"></button>
+        <button id="optionA" class="answer"></button>
+
+        <button id="optionB" class="answer"></button>
+
+        <button id="optionC" class="answer"></button>
+
+        <button id="optionD" class="answer"></button>
+
         <p id="results"></p>
     </section>
-    <section id="finalTally" class="final-tally">
-        <h2 id="lastTally"></h2>
-        <p>Enter Initials</p>
-        <form action="./script.js"></form>
-        <label for="initials">Here</label>
-        <input type="text" id="initials" name="initials" />
-        <button id="subBtn">Submit</button>
-        <p id="highScore"></p>
+    <section>
+        <h2>Time Left:<span id="timeText">69</span></h2>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
