--- a/text.html
+++ b/text.html
@@ -16,32 +16,31 @@
     <header class="header" id="scorecard">
         <h2>Quiz</h2>
         <h3 id="preScore"></h3>
+        <h2>Time Left:<span id="timeText"></span></h2>
 
 
     </header>
 
     <main class="main">
-        <h1>Sup?</h1>
+        <h1 data-state="hide">Sup?</h1>
         <p>69 seconds, get to it</p>
         <button id="startBtn">Less Gooo!</button>
     </main>
-
+    <div id="questionContainer"></div>
     <section class="testQuestions" id="questionEl">
         <h2 id="keepScore"></h2>
         <h3 id="question">Question</h3>
-        <button id="optionA" class="answer"></button>
+        <radio id="optionA" class="answer"></radio>
 
-        <button id="optionB" class="answer"></button>
+        <radio id="optionB" class="answer"></radio>
 
-        <button id="optionC" class="answer"></button>
+        <radio id="optionC" class="answer"></radio>
 
-        <button id="optionD" class="answer"></button>
+        <radio id="optionD" class="answer"></radio>
 
         <p id="results"></p>
     </section>
-    <section>
-        <h2>Time Left:<span id="timeText">69</span></h2>
-    </section>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="./script.js"></script>
 </body>
